--- a/style.css
+++ b/style.css
@@ -18,3 +18,13 @@ header{
     color:rgb(42, 122, 228);
 
 }
+
+      section {
+        background:rgb(184, 156, 213);
+        padding-bottom: 80px;
+        padding-top: 80px;
+        display:flex;
+        justify-content: center;
+      }
+
+      justify-conter:center;
